# rust_vscode_git_cli

./: Cargo.toml  README.md
src/: main.rs  oldcode.rs  printGit.rs
