[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.3"
dirs = "5.0.1"
glob = "0.3.1"
walkdir = "2.4.0"
